metadata/sf-prod/force-app/main/default/objects/Renewal_Template_Mapping__mdt/Renewal_Template_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LAMBDA-60439 custom metadata to map templates with different rules in Salesforce</description>
    <label>Renewal Template Mapping</label>
    <pluralLabel>Renewal Template Mappings</pluralLabel>
</CustomObject>