metadata/sf-prod/force-app/main/default/objects/Renewal_Template_Mapping__mdt/fields/Is_AR_Rule__c.field-meta.xml
<CustomField>
    <fullName>Is_AR_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LAMBDA-60439 is the rule for Auto renewal opportunities</description>
    <inlineHelpText>Check if this rule is related to AR Clause</inlineHelpText>
    <label>Is AR Rule?</label>
    <type>Checkbox</type>
</CustomField>