metadata/sf-prod/force-app/main/default/objects/Renewal_Template_Mapping__mdt/fields/Is_Maintenance_Rule__c.field-meta.xml
<CustomField>
    <fullName>Is_Maintenance_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Maintenance Rule</label>
    <type>Checkbox</type>
</CustomField>