metadata/sf-prod/force-app/main/default/objects/Renewal_Template_Mapping__mdt/fields/Stage_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Stage_Criteria__c</fullName>
    <description>LAMBDA-66348 the rule should work only if the opportunity has this stage</description>
    <inlineHelpText>Set the stage on which the rule should be applicable on</inlineHelpText>
    <label>Stage Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>