metadata/sf-prod/force-app/main/default/objects/Renewal_Template_Mapping__mdt/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <description>LAMBDA-60439 Template id for the renewals rule</description>
    <inlineHelpText>Specify the template Id for renewals</inlineHelpText>
    <label>TemplateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>