metadata/sf-prod/force-app/main/default/objects/Renewal_Template_Mapping__mdt/fields/Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Days__c</fullName>
    <description>LAMBDA-60439 field to specify the threshold between MAX(renewalDate,CloseDate)</description>
    <inlineHelpText>Number of days before sending email</inlineHelpText>
    <label>Threshold Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>