metadata/sf-prod/force-app/main/default/objects/Renewal_Template_Mapping__mdt/fields/Use_Termination_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Use_Termination_Deadline__c</fullName>
    <defaultValue>true</defaultValue>
    <description>LAMBDA-64039 checkbox field to base the calculation based on the Termination date</description>
    <inlineHelpText>Check if the calculation is based on Customer Termination Deadline</inlineHelpText>
    <label>Use Termination Deadline</label>
    <type>Checkbox</type>
</CustomField>