metadata/sf-prod/force-app/main/default/objects/Renewal_Template_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Threshold_Days__c</columns>
    <columns>TemplateId__c</columns>
    <columns>Is_Maintenance_Rule__c</columns>
    <columns>Is_AR_Rule__c</columns>
    <columns>Use_Termination_Deadline__c</columns>
    <columns>Stage_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>